Fixed overflow bug on sections

--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -31,5 +31,6 @@
 
   &_Track {
     position: relative;
+    overflow: hidden;
   }
 }
